[package]
name = "soly"
version = "0.1.0"
edition = "2024"
description = "Simple Transaction Builder and Sender for Solana"
repository = "https://github.com/CarteraMesh/soly"
license = "MIT"
authors = ["gh@cartera-mesh.com"]
documentation = "https://docs.rs/soly"
homepage = "https://github.com/CarteraMesh/soly"
keywords = []
categories = []
readme = "README.md"

[features]
default = []
blocking = []

[dependencies]
async-trait = "0.1.89"
base64 = "0.22"
bincode = "1"
bon = "3"
borsh = { version = "1" }
nitrogen-instruction-builder = { git = "https://github.com/CarteraMesh/nitrogen.git", branch = "main" }
solana-account = "2"
solana-account-decoder = "2"
solana-address-lookup-table-interface = { version = "2", features = [
    "bincode",
    "bytemuck",
] }
solana-commitment-config = "2"
solana-compute-budget-interface = { version = "2" }
solana-hash = "2"
solana-instruction = { version = "2", default-features = false, features = ["borsh", "std"] }
solana-keypair = "2"
solana-message = { version = "2" }
solana-pubkey = { version = "2", features = ["serde", "borsh", "curve25519"] }
solana-rpc-client = { version = "2" }
solana-rpc-client-api = { version = "2" }
solana-signature = { version = "2" }
solana-signer = { version = "2" }
solana-system-interface = { version = "1", features = ["bincode"] }
solana-transaction = { version = "2" }
spl-memo = "6"
thiserror = { version = "2", default-features = false }
tokio = { version = "1", features = ["sync"] }
tracing = { version = "0.1" }

[dev-dependencies]
anyhow = { version = "1" }
dotenvy = "0.15"
lazy_static = "1.4.0"
tokio = { version = "1", features = [ "full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
