[package]
name = "soly"
version = "0.1.0"
edition = "2024"
description = "Simple Transaction Builder and Sender for Solana"
repository = "https://github.com/CarteraMesh/soly"
license = "MIT"
authors = ["gh@cartera-mesh.com"]
documentation = "https://docs.rs/soly"
homepage = "https://github.com/CarteraMesh/soly"
keywords = ["solana", "blockchain", "crypto"]
categories = ["finance"]
readme = "README.md"

[features]
default = []

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bincode = "1"
bon = "3"
borsh = { version = "1" }
dashmap = "6"
moka = { version = "0.12", features = ["async-lock", "sync", "future"] }
nitrogen-instruction-builder = { version = "0.1.1" }
solana-account = "2"
solana-account-decoder = "2"
solana-address-lookup-table-interface = { version = "2", features = [
    "bincode",
    "bytemuck",
] }
solana-commitment-config = "2"
solana-compute-budget-interface = { version = "2" }
solana-hash = "2"
solana-instruction = { version = "2", default-features = false, features = ["borsh", "std"] }
solana-keypair = "2"
solana-message = { version = "2" }
solana-pubkey = { version = "2", features = ["serde", "borsh", "curve25519"] }
solana-rpc-client = { version = "2" }
solana-rpc-client-api = { version = "2" }
solana-signature = { version = "2" }
solana-signer = { version = "2" }
solana-system-interface = { version = "1", features = ["bincode"] }
solana-transaction = { version = "2" }
spl-memo = "6"
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1" }

[dev-dependencies]
anyhow = { version = "1" }
dotenvy = "0.15"
futures = "0.3.31"
lazy_static = "1.4.0"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tokio = { version = "1", features = [ "full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
